--- a/SolrExpress.Tests/packages.config
+++ b/SolrExpress.Tests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="RestSharp" version="105.1.0" targetFramework="net45" />
 </packages>
