--- a/SolrExpress/SolrExpress.csproj
+++ b/SolrExpress/SolrExpress.csproj
@@ -57,9 +57,10 @@
     <Compile Include="Helper\UtilHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryBuilder\IDocument.cs" />
-    <Compile Include="QueryBuilder\IResultDataBuilder.cs" />
     <Compile Include="QueryBuilder\IProvider.cs" />
     <Compile Include="QueryBuilder\IQueryParameter.cs" />
+    <Compile Include="QueryBuilder\IResultBuilder.cs" />
+    <Compile Include="QueryBuilder\SolrQueryResult.cs" />
     <Compile Include="Solr5\Parameter\FacetFieldParameter.cs" />
     <Compile Include="Solr5\Parameter\FacetQueryParameter.cs" />
     <Compile Include="Solr5\Parameter\FacetRangeParameter.cs" />
@@ -79,7 +80,7 @@
     <Compile Include="Solr5\Parameter\SortParameter.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Solr5\Builder\ResultDataBuilder.cs" />
+    <Compile Include="Solr5\Builder\DocsResultBuilder.cs" />
     <Compile Include="Solr5\Provider.cs" />
     <Compile Include="QueryBuilder\SolrQueryable.cs" />
   </ItemGroup>
