--- a/SolrExpress.Tests/SolrExpress.Tests.csproj
+++ b/SolrExpress.Tests/SolrExpress.Tests.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="QueryBuilder\ResultDataBuilderTests.cs" />
     <Compile Include="QueryBuilder\SolrQueryableTests.cs" />
+    <Compile Include="Solr5\Builder\FacetFieldResultBuilderTests.cs" />
     <Compile Include="Solr5\Parameter\FacetFieldParameterTests.cs" />
     <Compile Include="Solr5\Parameter\FacetQueryParameterTests.cs" />
     <Compile Include="Solr5\Parameter\FacetRangeParameterTests.cs" />
