--- a/SolrExpress.Tests/SolrExpress.Tests.csproj
+++ b/SolrExpress.Tests/SolrExpress.Tests.csproj
@@ -66,6 +66,7 @@
     <Compile Include="QueryBuilder\ResultDataBuilderTests.cs" />
     <Compile Include="QueryBuilder\SolrQueryableTests.cs" />
     <Compile Include="Solr5\Builder\FacetFieldResultBuilderTests.cs" />
+    <Compile Include="Solr5\Builder\FacetQueryResultBuilderTests.cs" />
     <Compile Include="Solr5\Parameter\FacetFieldParameterTests.cs" />
     <Compile Include="Solr5\Parameter\FacetQueryParameterTests.cs" />
     <Compile Include="Solr5\Parameter\FacetRangeParameterTests.cs" />
