--- a/SolrExpress.Tests/SolrExpress.Tests.csproj
+++ b/SolrExpress.Tests/SolrExpress.Tests.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Solr5\Parameter\FieldsParameterTests.cs" />
     <Compile Include="Solr5\Parameter\FilterParameterTests.cs" />
     <Compile Include="Solr5\Parameter\LimitParameterTests.cs" />
+    <Compile Include="Solr5\Parameter\MinimumShouldMatchParameterTests.cs" />
     <Compile Include="Solr5\Parameter\OffsetParameterTests.cs" />
     <Compile Include="Solr5\Parameter\QueryFieldParamaterTests.cs" />
     <Compile Include="Solr5\Parameter\QueryParameterTests.cs" />
