--- a/SolrExpress.Solr4.Tests/SolrExpress.Solr4.Tests.csproj
+++ b/SolrExpress.Solr4.Tests/SolrExpress.Solr4.Tests.csproj
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C0A6C5A5-9DEF-407B-A0E8-23E3ADFCDAB8}</ProjectGuid>
+    <ProjectGuid>{9B7A0323-0529-4729-B563-AC1D60013C68}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SolrExpress.Tests</RootNamespace>
-    <AssemblyName>SolrExpress.Tests</AssemblyName>
+    <RootNamespace>SolrExpress.Solr4.Tests</RootNamespace>
+    <AssemblyName>SolrExpress.Solr4.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -41,8 +41,8 @@
       <HintPath>..\packages\Moq.4.2.1502.0911\lib\net40\Moq.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
@@ -59,21 +59,22 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Helper\UtilHelperTests.cs" />
-    <Compile Include="Query\SolrQueryableTests.cs" />
-    <Compile Include="TestDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestDocument.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\SolrExpress.Solr4\SolrExpress.Solr4.csproj">
+      <Project>{1e999f4c-b17c-4106-9ba4-c7ac0e00c0cd}</Project>
+      <Name>SolrExpress.Solr4</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SolrExpress\SolrExpress.csproj">
       <Project>{5be2cf22-c52a-4518-b3c6-c7c6a25e63a5}</Project>
       <Name>SolrExpress</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
