--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5BE2CF22-C52A-4518-B3C6-C7C6A25E63A5}</ProjectGuid>
+    <ProjectGuid>{3B679214-5E64-44CE-9188-D692F2371709}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SolrExpress</RootNamespace>
-    <AssemblyName>SolrExpress</AssemblyName>
+    <RootNamespace>SolrExpress.Solr5</RootNamespace>
+    <AssemblyName>SolrExpress.Solr5</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -33,8 +33,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+    </Reference>
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.105.1.0\lib\net45\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,25 +48,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attribute\SolrFieldAtribute.cs" />
-    <Compile Include="Enumerator\SolrFacetSortType.cs" />
-    <Compile Include="Exception\AllowMultipleInstanceOfParameterTypeException.cs" />
-    <Compile Include="Exception\UnexpectedJsonFormatException.cs" />
-    <Compile Include="Exception\UnexpectedJsonQueryException.cs" />
-    <Compile Include="Helper\UtilHelper.cs" />
+    <Compile Include="Builder\DocumentBuilder.cs" />
+    <Compile Include="Builder\FacetFieldResultBuilder.cs" />
+    <Compile Include="Builder\FacetQueryResultBuilder.cs" />
+    <Compile Include="Builder\FacetRangeResultBuilder.cs" />
+    <Compile Include="Builder\StatisticResultBuilder.cs" />
+    <Compile Include="Linq\SolrQueryableExtension.cs" />
+    <Compile Include="Linq\SolrQueryResultExtension.cs" />
+    <Compile Include="Parameter\FacetFieldParameter.cs" />
+    <Compile Include="Parameter\FacetQueryParameter.cs" />
+    <Compile Include="Parameter\FacetRangeParameter.cs" />
+    <Compile Include="Parameter\FieldsParameter.cs" />
+    <Compile Include="Parameter\FilterParameter.cs" />
+    <Compile Include="Parameter\LimitParameter.cs" />
+    <Compile Include="Parameter\MinimumShouldMatchParameter.cs" />
+    <Compile Include="Parameter\OffsetParameter.cs" />
+    <Compile Include="Parameter\QueryFieldParamater.cs" />
+    <Compile Include="Parameter\QueryParameter.cs" />
+    <Compile Include="Parameter\SortParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Query\IConvertJsonObject.cs" />
-    <Compile Include="Query\IConvertJsonPlainText.cs" />
-    <Compile Include="Query\IDocument.cs" />
-    <Compile Include="Query\IProvider.cs" />
-    <Compile Include="Query\IQueryParameter.cs" />
-    <Compile Include="Query\IResultBuilder.cs" />
-    <Compile Include="Query\SolrQueryResult.cs" />
-    <Compile Include="Query\FacetKeyValue.cs" />
-    <Compile Include="Query\FacetRange.cs" />
-    <Compile Include="Query\SolrQueryable.cs" />
+    <Compile Include="Provider.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\SolrExpress\SolrExpress.csproj">
+      <Project>{5be2cf22-c52a-4518-b3c6-c7c6a25e63a5}</Project>
+      <Name>SolrExpress</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
