--- a/SolrExpress/SolrExpress.csproj
+++ b/SolrExpress/SolrExpress.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Query\IProvider.cs" />
     <Compile Include="Query\IQueryParameter.cs" />
     <Compile Include="Query\IResultBuilder.cs" />
+    <Compile Include="Query\SolrExpression.cs" />
     <Compile Include="Query\SolrQueryResult.cs" />
     <Compile Include="Query\FacetKeyValue.cs" />
     <Compile Include="Query\FacetRange.cs" />
