--- a/SolrExpress.Core/SolrExpress.Core.csproj
+++ b/SolrExpress.Core/SolrExpress.Core.csproj
@@ -57,7 +57,8 @@
     <Compile Include="Query\IConvertJsonPlainText.cs" />
     <Compile Include="Query\IDocument.cs" />
     <Compile Include="Query\IProvider.cs" />
-    <Compile Include="Query\IQueryParameter.cs" />
+    <Compile Include="Query\IParameter.cs" />
+    <Compile Include="Query\IQueryParameterValue.cs" />
     <Compile Include="Query\IResultBuilder.cs" />
     <Compile Include="Query\SolrExpression.cs" />
     <Compile Include="Query\SolrQueryResult.cs" />
