--- a/SolrExpress.Solr5.Tests/SolrExpress.Solr5.Tests.csproj
+++ b/SolrExpress.Solr5.Tests/SolrExpress.Solr5.Tests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Builder\FacetQueryResultBuilderTests.cs" />
     <Compile Include="Builder\FacetRangeResultBuilderTests.cs" />
     <Compile Include="ParameterValue\RangeValueTests.cs" />
+    <Compile Include="ParameterValue\SingleValueTests.cs" />
     <Compile Include="Parameter\FacetFieldParameterTests.cs" />
     <Compile Include="Parameter\FacetQueryParameterTests.cs" />
     <Compile Include="Parameter\FacetRangeParameterTests.cs" />
