MultiValue and NegativeValue
* MultiValue implementation
* NegativeValue implementation

--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -56,6 +56,8 @@
     <Compile Include="Linq\SolrQueryableExtension.cs" />
     <Compile Include="Linq\SolrQueryResultExtension.cs" />
     <Compile Include="ParameterValue\FreeValue.cs" />
+    <Compile Include="ParameterValue\MultiValue.cs" />
+    <Compile Include="ParameterValue\NegativeValue.cs" />
     <Compile Include="ParameterValue\RangeValue.cs" />
     <Compile Include="ParameterValue\SingleValue.cs" />
     <Compile Include="Parameter\FacetFieldParameter.cs" />
