--- a/SolrExpress.Core/SolrExpress.Core.csproj
+++ b/SolrExpress.Core/SolrExpress.Core.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Attribute\SolrFieldAtribute.cs" />
     <Compile Include="Enumerator\SolrFacetSortType.cs" />
+    <Compile Include="Enumerator\SolrQueryParameterConditionType.cs" />
     <Compile Include="Exception\AllowMultipleInstanceOfParameterTypeException.cs" />
     <Compile Include="Exception\UnexpectedJsonFormatException.cs" />
     <Compile Include="Exception\UnexpectedJsonQueryException.cs" />
