--- a/SolrExpress.Solr5.Tests/SolrExpress.Solr5.Tests.csproj
+++ b/SolrExpress.Solr5.Tests/SolrExpress.Solr5.Tests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Parameter\QueryParameterTests.cs" />
     <Compile Include="Parameter\SortParameterTests.cs" />
     <Compile Include="Parameter\SpatialArbitraryFilterParameterTests.cs" />
+    <Compile Include="Parameter\SpatialFilterParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDocument.cs" />
   </ItemGroup>
