--- a/SolrExpress.Solr5/SolrExpress.Solr5.csproj
+++ b/SolrExpress.Solr5/SolrExpress.Solr5.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Parameter\QueryParameter.cs" />
     <Compile Include="Parameter\SortParameter.cs" />
     <Compile Include="Parameter\SpatialArbitraryFilterParameter.cs" />
+    <Compile Include="Parameter\SpatialFilterParameter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Provider.cs" />
   </ItemGroup>
