--- a/SolrExpress.Solr4.Tests/SolrExpress.Solr4.Tests.csproj
+++ b/SolrExpress.Solr4.Tests/SolrExpress.Solr4.Tests.csproj
@@ -60,6 +60,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Parameter\FacetFieldParameterTests.cs" />
+    <Compile Include="Parameter\FieldListParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDocument.cs" />
   </ItemGroup>
