--- a/SolrExpress.Solr4.Tests/SolrExpress.Solr4.Tests.csproj
+++ b/SolrExpress.Solr4.Tests/SolrExpress.Solr4.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Parameter\FieldListParameterTests.cs" />
     <Compile Include="Parameter\FilterQueryParameterTests.cs" />
     <Compile Include="Parameter\QueryParameterTests.cs" />
+    <Compile Include="Parameter\SpatialFilterParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDocument.cs" />
   </ItemGroup>
