--- a/SolrExpress.Solr4.Tests/SolrExpress.Solr4.Tests.csproj
+++ b/SolrExpress.Solr4.Tests/SolrExpress.Solr4.Tests.csproj
@@ -64,7 +64,12 @@
     <Compile Include="Parameter\FacetRangeParameterTests.cs" />
     <Compile Include="Parameter\FieldListParameterTests.cs" />
     <Compile Include="Parameter\FilterQueryParameterTests.cs" />
+    <Compile Include="Parameter\RowsParameterTests.cs" />
+    <Compile Include="Parameter\MinimumShouldMatchParameterTests.cs" />
+    <Compile Include="Parameter\StartParameterTests.cs" />
+    <Compile Include="Parameter\QueryFieldParameterTests.cs" />
     <Compile Include="Parameter\QueryParameterTests.cs" />
+    <Compile Include="Parameter\SortParameterTests.cs" />
     <Compile Include="Parameter\SpatialFilterParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDocument.cs" />
