--- a/SolrExpress.Solr5.Tests/SolrExpress.Solr5.Tests.csproj
+++ b/SolrExpress.Solr5.Tests/SolrExpress.Solr5.Tests.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Builder\FacetFieldResultBuilderTests.cs" />
     <Compile Include="Builder\FacetQueryResultBuilderTests.cs" />
     <Compile Include="Builder\FacetRangeResultBuilderTests.cs" />
+    <Compile Include="Builder\StatisticResultBuilderTests.cs" />
     <Compile Include="Parameter\FacetFieldParameterTests.cs" />
     <Compile Include="Parameter\FacetQueryParameterTests.cs" />
     <Compile Include="Parameter\FacetRangeParameterTests.cs" />
