--- a/SolrExpress.Core/SolrExpress.Core.csproj
+++ b/SolrExpress.Core/SolrExpress.Core.csproj
@@ -59,6 +59,7 @@
     <Compile Include="ParameterValue\FreeValue.cs" />
     <Compile Include="ParameterValue\MultiValue.cs" />
     <Compile Include="ParameterValue\NegativeValue.cs" />
+    <Compile Include="ParameterValue\QueryAll.cs" />
     <Compile Include="ParameterValue\RangeValue.cs" />
     <Compile Include="ParameterValue\SingleValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
