--- a/SolrExpress.Solr4.IntegrationTests/SolrExpress.Solr4.IntegrationTests.csproj
+++ b/SolrExpress.Solr4.IntegrationTests/SolrExpress.Solr4.IntegrationTests.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9B7A0323-0529-4729-B563-AC1D60013C68}</ProjectGuid>
+    <ProjectGuid>{406FB05B-8048-406B-B80B-07D7F9C664AA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SolrExpress.Solr4.Tests</RootNamespace>
-    <AssemblyName>SolrExpress.Solr4.Tests</AssemblyName>
+    <RootNamespace>SolrExpress.Solr4.IntegrationTests</RootNamespace>
+    <AssemblyName>SolrExpress.Solr4.IntegrationTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -16,8 +16,6 @@
     <ReferencePath>$(ProgramFiles)\Common Files\microsoft shared\VSTT\$(VisualStudioVersion)\UITestExtensionPackages</ReferencePath>
     <IsCodedUITest>False</IsCodedUITest>
     <TestProjectType>UnitTest</TestProjectType>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -37,13 +35,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Moq">
-      <HintPath>..\packages\Moq.4.2.1502.0911\lib\net40\Moq.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -59,25 +50,12 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Builder\DocumentBuilderTests.cs" />
-    <Compile Include="Builder\FacetFieldResultBuilderTests.cs" />
-    <Compile Include="Builder\FacetQueryResultBuilderTests.cs" />
-    <Compile Include="Builder\FacetRangeResultBuilderTests.cs" />
-    <Compile Include="Builder\StatisticResultBuilderTests.cs" />
-    <Compile Include="Parameter\FacetFieldParameterTests.cs" />
-    <Compile Include="Parameter\FacetQueryParameterTests.cs" />
-    <Compile Include="Parameter\FacetRangeParameterTests.cs" />
-    <Compile Include="Parameter\FieldListParameterTests.cs" />
-    <Compile Include="Parameter\FilterQueryParameterTests.cs" />
-    <Compile Include="Parameter\RowsParameterTests.cs" />
-    <Compile Include="Parameter\MinimumShouldMatchParameterTests.cs" />
-    <Compile Include="Parameter\StartParameterTests.cs" />
-    <Compile Include="Parameter\QueryFieldParameterTests.cs" />
-    <Compile Include="Parameter\QueryParameterTests.cs" />
-    <Compile Include="Parameter\SortParameterTests.cs" />
-    <Compile Include="Parameter\SpatialFilterParameterTests.cs" />
+    <Compile Include="IntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestDocument.cs" />
+    <Compile Include="TechProductDocument.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="read.md" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SolrExpress.Core\SolrExpress.Core.csproj">
@@ -88,9 +66,6 @@
       <Project>{1e999f4c-b17c-4106-9ba4-c7ac0e00c0cd}</Project>
       <Name>SolrExpress.Solr4</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
@@ -112,13 +87,6 @@
   </Choose>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
-  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
