--- a/SolrExpress.Solr4/SolrExpress.Solr4.csproj
+++ b/SolrExpress.Solr4/SolrExpress.Solr4.csproj
@@ -50,6 +50,9 @@
   <ItemGroup>
     <Compile Include="Builder\DocumentBuilder.cs" />
     <Compile Include="Builder\FacetFieldResultBuilder.cs" />
+    <Compile Include="Builder\FacetQueryResultBuilder.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Builder\StatisticResultBuilder.cs" />
     <Compile Include="Parameter\FacetFieldParameter.cs">
       <SubType>Code</SubType>
