--- a/SolrExpress.Solr5.Tests/SolrExpress.Solr5.Tests.csproj
+++ b/SolrExpress.Solr5.Tests/SolrExpress.Solr5.Tests.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Parameter\SpatialFilterParameterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestDocument.cs" />
+    <Compile Include="TestDocumentWithAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SolrExpress.Core\SolrExpress.Core.csproj">
