--- a/SolrExpress.Tests/SolrExpress.Tests.csproj
+++ b/SolrExpress.Tests/SolrExpress.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Query\SolrQueryableTests.cs" />
     <Compile Include="TestDocument.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestDocumentWithAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
