--- a/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
+++ b/SolrExpress.Core.Tests/SolrExpress.Core.Tests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{C0A6C5A5-9DEF-407B-A0E8-23E3ADFCDAB8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SolrExpress.Tests</RootNamespace>
-    <AssemblyName>SolrExpress.Tests</AssemblyName>
+    <RootNamespace>SolrExpress.Core.Tests</RootNamespace>
+    <AssemblyName>SolrExpress.Core.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
