--- a/SolrExpress.Solr4.Tests/SolrExpress.Solr4.UnitTests.csproj
+++ b/SolrExpress.Solr4.Tests/SolrExpress.Solr4.UnitTests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{9B7A0323-0529-4729-B563-AC1D60013C68}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SolrExpress.Solr4.Tests</RootNamespace>
-    <AssemblyName>SolrExpress.Solr4.Tests</AssemblyName>
+    <RootNamespace>SolrExpress.Solr4.UnitTests</RootNamespace>
+    <AssemblyName>SolrExpress.Solr4.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
