--- a/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
+++ b/SolrExpress.Solr5.UnitTests/SolrExpress.Solr5.UnitTests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{F4D28571-2DCC-401D-A2BD-43D828D91594}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SolrExpress.Solr5.Tests</RootNamespace>
-    <AssemblyName>SolrExpress.Solr5.Tests</AssemblyName>
+    <RootNamespace>SolrExpress.Solr5.UnitTests</RootNamespace>
+    <AssemblyName>SolrExpress.Solr5.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
